--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
   <header>
     <nav>
-      <div class="logo">AJI</div>
+      <div class="Logo">
+        <img src="Gambar/logo aji.jpeg" width="30" height="auto" alt="">  Fajri
+      </div>
       <ul class="nav-links">
         <li><a href="#home">Beranda</a></li>
         <li><a href="#about">Tentang</a></li>
