--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 AJI. All rights reserved.</p>
+    <p>&copy; Aji developer 2025.</p>
   </footer>
 </body>
 </html>
