--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <header>
     <nav>
       <div class="Logo">
-        <img src="Gambar/logo aji.jpeg" width="30" height="auto" alt="">  Fajri
+        <img src="Gambar/logo aji.jpeg" width="30" height="auto" alt="">
+        <span>Aji</span>
       </div>
       <ul class="nav-links">
         <li><a href="#home">Beranda</a></li>
@@ -42,14 +43,16 @@
     <p>Berikut beberapa project yang pernah saya buat:</p>
     <div class="project-gallery">
       <div class="project-card">
-        <img src="project1.jpg" alt="Project Rohis" />
         <h3>Aplikasi Rohis</h3>
+        <img src="/Gambar/logo aplikasi.png" alt="">
         <p>Aplikasi manajemen ekskul Rohis untuk absensi, kegiatan, uang kas, dan dokumentasi.</p>
+        <a href="https://github.com/ajii77/rohis-app" class="detail-btn">Lihat Detail</a>
       </div>
       <div class="project-card">
-        <img src="project2.jpg" alt="Project Kas" />
         <h3>Kas Siswa Digital</h3>
+        <img src="/Gambar/kas.jpg" alt="">
         <p>Aplikasi pencatatan kas kelas berbasis phpRad, dengan fitur laporan dan riwayat kas.</p>
+        <a href="#" class="detail-btn">Lihat Detail</a>
       </div>
     </div>
   </section>
