--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="#home">Beranda</a></li>
         <li><a href="#about">Tentang</a></li>
         <li><a href="#project">Project</a></li>
+        <li><a href="#contack">contack</a></li>
       </ul>
     </nav>
   </header>
@@ -45,16 +46,25 @@
       <div class="project-card">
         <h3>Aplikasi Rohis</h3>
         <img src="/Gambar/logo aplikasi.png" alt="">
-        <p>Aplikasi manajemen ekskul Rohis untuk absensi, kegiatan, uang kas, dan dokumentasi.</p>
-        <a href="https://github.com/ajii77/rohis-app" class="detail-btn">Lihat Detail</a>
+        <p>Aplikasi Rohis adalah sistem manajemen kegiatan Rohani Islam (Rohis) di sekolah yang membantu pengurus dalam mengatur berbagai aspek organisasi. Dibuat dengan menggunakan phpRad, aplikasi ini memudahkan proses dokumentasi, pengelolaan data anggota, absensi, kas, dan agenda kegiatan.
+
+</p>
+        <a href="https://github.com/ajii77/Website-sendiri" class="detail-btn">Lihat Detail</a>
       </div>
       <div class="project-card">
-        <h3>Kas Siswa Digital</h3>
+        <h3>Kas Rohis</h3>
         <img src="/Gambar/kas.jpg" alt="">
-        <p>Aplikasi pencatatan kas kelas berbasis phpRad, dengan fitur laporan dan riwayat kas.</p>
-        <a href="#" class="detail-btn">Lihat Detail</a>
+        <p>Aplikasi Kas Rohis adalah sistem pencatatan keuangan yang dirancang khusus untuk organisasi Rohani Islam (Rohis) di sekolah. Aplikasi ini membantu bendahara Rohis mencatat arus kas secara digital, lebih praktis dan transparan. Dibuat menggunakan phpRad untuk mempercepat pengembangan dan manajemen data.</p>
+        <a href="https://github.com/ajii77/Website-sendiri" class="detail-btn">Lihat Detail</a>
       </div>
     </div>
+  </section>
+
+  <section class="contact" id="contact">
+    <h2>Hubungi Saya</h2>
+    <p>Saya Ingin bekerjasama atau sekadar ngobrol seputar project? Silakan hubungi saya di</p>
+    <p>Email: <a href="mailto:fajrihajat@gmail.com">fajrihajat@gmail.com</a></p>
+    <p>WhatsApp:<a href="https://wa.me/62895-3916-40225?text=Hai,%20Saya%20tertarik%20dengan%20projeck%20kamu" Target="_blank">Klik untuk chat</a></p>
   </section>
 
   <footer>
