--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
   </header>
 
   <section class="hero" id="home">
-    <img src="/Gambar/aji.jpg.jpeg" alt="Aji.jpg" />
-    <h1>Halo, saya AJI</h1>
+    <h1>Selamat Datang Di WEB Aji</h1>
+    <img src="/Website-sendiri/Gambar/aji.jpg.jpeg" alt="Aji.jpg" />
+    <h2>Halo, saya AJI</h2>
     <p>Hai! Saya Aji, seorang web developer dengan skill HTML, CSS, dan phpRad. Saya suka main futsal dan bercita-cita menjadi programmer sukses di masa depan.</p>
     <a href="#project" class="btn">Lihat Project</a>
   </section>
@@ -45,17 +46,23 @@
     <div class="project-gallery">
       <div class="project-card">
         <h3>Aplikasi Rohis</h3>
-        <img src="/Gambar/logo aplikasi.png" alt="">
-        <p>Aplikasi Rohis adalah sistem manajemen kegiatan Rohani Islam (Rohis) di sekolah yang membantu pengurus dalam mengatur berbagai aspek organisasi. Dibuat dengan menggunakan phpRad, aplikasi ini memudahkan proses dokumentasi, pengelolaan data anggota, absensi, kas, dan agenda kegiatan.
-
-</p>
+        <img src="/Gambar/rohman (2).png" alt="">
+        <p>Aplikasi Rohis adalah sistem manajemen kegiatan Rohani Islam (Rohis) di sekolah yang membantu pengurus dalam mengatur berbagai aspek organisasi. Dibuat dengan menggunakan phpRad, aplikasi ini memudahkan proses dokumentasi, pengelolaan data anggota, absensi, kas, dan agenda kegiatan.        </p>
         <a href="https://github.com/ajii77/Website-sendiri" class="detail-btn">Lihat Detail</a>
       </div>
       <div class="project-card">
         <h3>Kas Rohis</h3>
-        <img src="/Gambar/kas.jpg" alt="">
+        <img src="/Website-sendiri/Gambar/kas rohis.png" alt="">
         <p>Aplikasi Kas Rohis adalah sistem pencatatan keuangan yang dirancang khusus untuk organisasi Rohani Islam (Rohis) di sekolah. Aplikasi ini membantu bendahara Rohis mencatat arus kas secara digital, lebih praktis dan transparan. Dibuat menggunakan phpRad untuk mempercepat pengembangan dan manajemen data.</p>
         <a href="https://github.com/ajii77/Website-sendiri" class="detail-btn">Lihat Detail</a>
+        </div>
+        <div class="project-card">
+          <h3>Daftar Tugas</h3>
+          <img src="/Website-sendiri/Gambar/Daftar Tugas.png" alt="">
+          <p>Halaman ini menampilkan daftar tugas sekolah dengan informasi judul, deskripsi, deadline, status, dan aksi. Pengguna dapat memfilter tugas berdasarkan status, melihat progres penyelesaian, serta menambahkan tugas baru. Setiap tugas memiliki opsi untuk diselesaikan, diedit, atau dihapus. Progres ditampilkan dalam bentuk persentase dan bar visual.</p>
+           <a href="https://github.com/ajii77/Website-sendiri" class="detail-btn">Lihat Detail"></a>
+        </div>
+
       </div>
     </div>
   </section>
